--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ greenlet==1.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
+psycopg2==2.8.6
+python-dotenv==0.17.1
 pytz==2021.1
 six==1.16.0
 SQLAlchemy==1.4.17
