--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,30 @@
 aniso8601==9.0.1
+blinker==1.4
 click==8.0.1
 colorama==0.4.4
+Deprecated==1.2.12
 Flask==1.1.0
+flask-buzz==0.1.15
+Flask-Cors==3.0.10
+Flask-Login==0.5.0
+Flask-Mail==0.9.1
+flask-praetorian==1.2.0
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.0
+inflection==0.3.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
+passlib==1.7.4
+pendulum==2.1.2
 psycopg2==2.8.6
+py-buzz==1.0.3
+PyJWT==2.1.0
+python-dateutil==2.8.1
 python-dotenv==0.17.1
 pytz==2021.1
+pytzdata==2020.1
 six==1.16.0
 SQLAlchemy==1.4.17
 Werkzeug==2.0.1
+wrapt==1.12.1
