--- a/requirements.txt
+++ b/requirements.txt
@@ -3,14 +3,18 @@ blinker==1.4
 click==8.0.1
 colorama==0.4.4
 Deprecated==1.2.12
+dnspython==2.1.0
+email-validator==1.1.2
 Flask==1.1.0
 flask-buzz==0.1.15
 Flask-Cors==3.0.10
+Flask-HTTPAuth==4.4.0
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
-flask-praetorian==1.2.0
 Flask-SQLAlchemy==2.5.1
+Flask-WTF==0.15.1
 greenlet==1.1.0
+idna==3.2
 inflection==0.3.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
@@ -28,3 +32,4 @@ six==1.16.0
 SQLAlchemy==1.4.17
 Werkzeug==2.0.1
 wrapt==1.12.1
+WTForms==2.3.3
