--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.6.5
 aniso8601==9.0.1
 blinker==1.4
 click==8.0.1
@@ -11,12 +12,14 @@ Flask-HTTPAuth==4.4.0
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
 flask-marshmallow==0.14.0
+Flask-Migrate==3.0.1
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.0
 idna==3.2
 inflection==0.3.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
+Mako==1.1.4
 MarkupSafe==2.0.1
 marshmallow==3.12.1
 marshmallow-sqlalchemy==0.26.1
@@ -27,6 +30,7 @@ py-buzz==1.0.3
 PyJWT==2.1.0
 python-dateutil==2.8.1
 python-dotenv==0.17.1
+python-editor==1.0.4
 pytz==2021.1
 pytzdata==2020.1
 six==1.16.0
