--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 alembic==1.6.5
 aniso8601==9.0.1
+atomicwrites==1.4.0
+attrs==21.2.0
 blinker==1.4
 click==8.0.1
 colorama==0.4.4
@@ -17,17 +19,23 @@ Flask-SQLAlchemy==2.5.1
 greenlet==1.1.0
 idna==3.2
 inflection==0.3.1
+iniconfig==1.1.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
 Mako==1.1.4
 MarkupSafe==2.0.1
 marshmallow==3.12.1
 marshmallow-sqlalchemy==0.26.1
+packaging==20.9
 passlib==1.7.4
 pendulum==2.1.2
+pluggy==0.13.1
 psycopg2==2.8.6
+py==1.10.0
 py-buzz==1.0.3
 PyJWT==2.1.0
+pyparsing==2.4.7
+pytest==6.2.4
 python-dateutil==2.8.1
 python-dotenv==0.17.1
 python-editor==1.0.4
@@ -35,5 +43,6 @@ pytz==2021.1
 pytzdata==2020.1
 six==1.16.0
 SQLAlchemy==1.4.17
+toml==0.10.2
 Werkzeug==2.0.1
 wrapt==1.12.1
