--- a/YG-server/requirements.txt
+++ b/YG-server/requirements.txt
@@ -3,6 +3,9 @@ aniso8601==9.0.1
 atomicwrites==1.4.0
 attrs==21.2.0
 blinker==1.4
+cachetools==4.2.2
+certifi==2021.5.30
+chardet==4.0.0
 click==8.0.1
 colorama==0.4.4
 Deprecated==1.2.12
@@ -16,8 +19,15 @@ Flask-Mail==0.9.1
 flask-marshmallow==0.14.0
 Flask-Migrate==3.0.1
 Flask-SQLAlchemy==2.5.1
+google-api-core==1.30.0
+google-api-python-client==2.9.0
+google-auth==1.31.0
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==0.4.4
+googleapis-common-protos==1.53.0
 greenlet==1.1.0
-idna==3.2
+httplib2==0.19.1
+idna==2.10
 inflection==0.3.1
 iniconfig==1.1.1
 itsdangerous==2.0.1
@@ -26,13 +36,17 @@ Mako==1.1.4
 MarkupSafe==2.0.1
 marshmallow==3.12.1
 marshmallow-sqlalchemy==0.26.1
+oauthlib==3.1.1
 packaging==20.9
 passlib==1.7.4
 pendulum==2.1.2
 pluggy==0.13.1
+protobuf==3.17.3
 psycopg2==2.8.6
 py==1.10.0
 py-buzz==1.0.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 PyJWT==2.1.0
 pyparsing==2.4.7
 pytest==6.2.4
@@ -41,8 +55,13 @@ python-dotenv==0.17.1
 python-editor==1.0.4
 pytz==2021.1
 pytzdata==2020.1
+requests==2.25.1
+requests-oauthlib==1.3.0
+rsa==4.7.2
 six==1.16.0
 SQLAlchemy==1.4.17
 toml==0.10.2
+uritemplate==3.0.1
+urllib3==1.26.5
 Werkzeug==2.0.1
 wrapt==1.12.1
