--- a/yg-client/package.json
+++ b/yg-client/package.json
@@ -13,12 +13,16 @@
     "next": "11.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-tooltip": "^4.2.21",
     "swr": "^0.5.6"
   },
   "devDependencies": {
     "@types/react": "17.0.11",
+    "autoprefixer": "^10.2.6",
     "eslint": "7.28.0",
     "eslint-config-next": "11.0.0",
+    "postcss": "^8.3.5",
+    "tailwindcss": "^2.2.2",
     "typescript": "4.3.2"
   }
 }
