--- a/yg-client/package.json
+++ b/yg-client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.1",
     "axios": "^0.21.1",
     "next": "11.0.0",
     "react": "17.0.2",
