--- a/yg-client/package.json
+++ b/yg-client/package.json
@@ -14,6 +14,7 @@
     "next": "11.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-placeholder": "^4.1.0",
     "react-tooltip": "^4.2.21",
     "swr": "^0.5.6"
   },
