--- a/yg-client/package.json
+++ b/yg-client/package.json
@@ -13,6 +13,8 @@
     "axios": "^0.21.1",
     "next": "11.0.0",
     "react": "17.0.2",
+    "react-dnd": "^14.0.2",
+    "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "17.0.2",
     "react-placeholder": "^4.1.0",
     "react-tooltip": "^4.2.21",
