--- a/yg-client/package.json
+++ b/yg-client/package.json
@@ -16,6 +16,7 @@
     "react-dnd": "^14.0.2",
     "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "17.0.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-placeholder": "^4.1.0",
     "react-tooltip": "^4.2.21",
     "swr": "^0.5.6"
