--- a/yg-client/package.json
+++ b/yg-client/package.json
@@ -13,10 +13,12 @@
     "axios": "^0.21.1",
     "next": "11.0.0",
     "react": "17.0.2",
+    "react-confirm": "^0.1.24",
     "react-dnd": "^14.0.2",
     "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "17.0.2",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-modal": "^3.14.3",
     "react-placeholder": "^4.1.0",
     "react-tooltip": "^4.2.21",
     "swr": "^0.5.6"
