--- a/yg-client/package.json
+++ b/yg-client/package.json
@@ -21,7 +21,8 @@
     "react-modal": "^3.14.3",
     "react-placeholder": "^4.1.0",
     "react-tooltip": "^4.2.21",
-    "swr": "^0.5.6"
+    "swr": "^0.5.6",
+    "zustand": "^3.5.5"
   },
   "devDependencies": {
     "@types/react": "17.0.11",
