--- a/yg-client/package.json
+++ b/yg-client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.1",
+    "@types/react-confirm": "^0.1.4",
     "axios": "^0.21.1",
     "next": "11.0.0",
     "react": "17.0.2",
