--- a/yg-client/package.json
+++ b/yg-client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^1.0.1",
     "@types/react-confirm": "^0.1.4",
+    "@types/react-modal": "^3.12.1",
     "axios": "^0.21.1",
     "next": "11.0.0",
     "react": "17.0.2",
