Started implementing landing page

--- a/yg-client/package.json
+++ b/yg-client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.1",
+    "@tailwindcss/forms": "^0.3.3",
     "@types/react-confirm": "^0.1.4",
     "@types/react-modal": "^3.12.1",
     "axios": "^0.21.1",
