--- a/yg-client/package.json
+++ b/yg-client/package.json
@@ -14,6 +14,7 @@
     "@types/react-confirm": "^0.1.4",
     "@types/react-modal": "^3.12.1",
     "axios": "^0.21.1",
+    "immer": "^9.0.5",
     "next": "11.0.0",
     "react": "17.0.2",
     "react-confirm": "^0.1.24",
