--- a/yg-client/package.json
+++ b/yg-client/package.json
@@ -24,6 +24,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-modal": "^3.14.3",
     "react-placeholder": "^4.1.0",
+    "react-toastify": "^7.0.4",
     "react-tooltip": "^4.2.21",
     "swr": "^0.5.6",
     "zustand": "^3.5.5"
