--- a/YG-server/requirements.txt
+++ b/YG-server/requirements.txt
@@ -14,6 +14,7 @@ colorama==0.4.4
 cryptography==3.4.7
 Deprecated==1.2.12
 dnspython==2.1.0
+ecdsa==0.17.0
 Flask==1.1.0
 flask-buzz==0.1.15
 Flask-Cors==3.0.10
@@ -59,6 +60,7 @@ pytest==6.2.4
 python-dateutil==2.8.1
 python-dotenv==0.17.1
 python-editor==1.0.4
+python-jose==3.3.0
 pytz==2021.1
 pytzdata==2020.1
 requests==2.25.1
