started on youtube auth flow after login

--- a/yg-client/package.json
+++ b/yg-client/package.json
@@ -12,8 +12,10 @@
     "@auth0/nextjs-auth0": "^1.5.0",
     "@heroicons/react": "^1.0.1",
     "@tailwindcss/forms": "^0.3.3",
+    "@types/auth0": "^2.33.4",
     "@types/react-confirm": "^0.1.4",
     "@types/react-modal": "^3.12.1",
+    "auth0": "^2.36.1",
     "axios": "^0.21.1",
     "immer": "^9.0.5",
     "next": "11.0.0",
