Can now add and remove channels w/ new Auth0 system

--- a/yg-client/package.json
+++ b/yg-client/package.json
@@ -17,6 +17,8 @@
     "@types/react-modal": "^3.12.1",
     "auth0": "^2.36.1",
     "axios": "^0.21.1",
+    "cookie": "^0.4.1",
+    "cors": "^2.8.5",
     "immer": "^9.0.5",
     "next": "11.0.0",
     "react": "17.0.2",
