--- a/yg-client/package.json
+++ b/yg-client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.5.0",
     "@heroicons/react": "^1.0.1",
+    "@hookform/resolvers": "^2.7.0",
     "@tailwindcss/forms": "^0.3.3",
     "@types/auth0": "^2.33.4",
     "@types/react-confirm": "^0.1.4",
@@ -26,12 +27,14 @@
     "react-dnd": "^14.0.2",
     "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.12.2",
     "react-infinite-scroll-component": "^6.1.0",
     "react-modal": "^3.14.3",
     "react-placeholder": "^4.1.0",
     "react-toastify": "^7.0.4",
     "react-tooltip": "^4.2.21",
     "swr": "^0.5.6",
+    "yup": "^0.32.9",
     "zustand": "^3.5.5"
   },
   "devDependencies": {
